--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           sed -i "s/1.3.37/${version_without_v}/g" "info.plist"
           
           mkdir -p build
-          find . -not -path '*/\.git/*' -exec zip --symlinks "build/alfred-granted-${VERSION}.alfredworkflow" {} +
+          find . -not -path '*/\.git|\.github/*' -exec zip --symlinks "build/alfred-granted-${VERSION}.alfredworkflow" {} +
           echo "artifactPath=build/alfred-granted-${VERSION}.alfredworkflow" >> $GITHUB_ENV
 
       - uses: diamondburned/action-upload-release@main
