Update icons: RDS, S3, DMS, and VPC
- Replace RDS icon with Aurora icon
- Replace S3 icon with S3Standard icon
- Replace DMS icon with DatabaseMigration icon
- Replace VPC icon with VirtualPrivateCloud icon
- Add .alfredworkflow to .gitignore

--- a/info.plist
+++ b/info.plist
@@ -378,6 +378,7 @@ echo ']}'</string>
 				<key>script</key>
 				<string># I know it's lazy :3 
 
+export GRANTED_ALIAS_CONFIGURED="true";
 
 if [[ $2 == "" ]]; then
 	if [[ $3 == "" ]]; then
